# ScreenInMC-Plugin

./: .build.bat.un~  .gitignore  LICENSE  README.md  build.bat  build.gradle  chromium-api-example.js  remapping.bat  replaceAll.bat  settings.gradle
.github/: version.yml
.github/workflows/: build-1.16.5.yml  build-1.17.1.yml  build-1.18.2.yml  build-1.19.2.yml  build-1.19.3.yml  build-all.yml  delete_actions.yml  gradle.yml
Subplugins/WindowsDisplayCore/src/: plugin.yml
Subplugins/WindowsDisplayCore/src/cn/mingbai/WindowsDisplayCore/: Main.java
gradle/wrapper/: gradle-wrapper.properties
src/main/: getallcolorindex_1.8.0.py  win.sh
src/main/LibrariesLoader/: build.gradle
src/main/cpp/: 1.py  CMakeLists.txt  CppProperties.json  RDPConnector.cpp  RDPConnector.h  ScreenInMC.cpp  ScreenInMC.h  build-all-github.ps1  build-all.ps1  build-freerdp.ps1  build-linux-github.sh  build-linux.sh  build-windows-local.cmd  build-windows.cmd  build-windows.sh  cn_mingbai_ScreenInMC_Natives_GPUDither.cpp  cn_mingbai_ScreenInMC_Natives_GPUDither.h  code.cl  code2.cl  code64.cl  code_1x1.cl  code_1x1_processed.cl  code_processed.cl  cpp.sln  cpp.vcxproj  cpp.vcxproj.filters  getallcolorindex_1.19.2.py
src/main/cpp/Release/: cpp.dll.recipe  cpp.exp  cpp.iobj  cpp.ipdb  cpp.lib  cpp.vcxproj.FileListAbsolute.txt  screen-in-mc-windows-i386.dll.recipe  screen-in-mc-windows-i386.exp  screen-in-mc-windows-i386.iobj  screen-in-mc-windows-i386.ipdb  screen-in-mc-windows-i386.lib
src/main/cpp/Release/cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpp.lastbuildstate  cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/main/cpp/opencl/: code.cl  code2.cl
src/main/cpp/opencl_codes/: code_1x1.cl  code_fast.cl
src/main/cpp/x64/Debug/: cpp.dll.recipe  cpp.exe.recipe  cpp.exp  cpp.ilk  cpp.lib  cpp.vcxproj.FileListAbsolute.txt  vc143.idb
src/main/cpp/x64/Debug/cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpp.lastbuildstate  cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/main/cpp/x64/Release/: cpp.dll.recipe  cpp.exe.recipe  cpp.exp  cpp.iobj  cpp.ipdb  cpp.lib  cpp.vcxproj.FileListAbsolute.txt  screen-in-mc-windows-amd64.dll.recipe  screen-in-mc-windows-amd64.exp  screen-in-mc-windows-amd64.iobj  screen-in-mc-windows-amd64.ipdb  screen-in-mc-windows-amd64.lib
src/main/cpp/x64/Release/cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cpp.lastbuildstate  cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/main/java/cn/mingbai/ScreenInMC/: CLI.java  CommandListener.java  Core.java  EventListener.java  Items.java  Main.java  PacketListener.java  RedstoneBridge.java  VideoProcessor.java
src/main/java/cn/mingbai/ScreenInMC/BrowserCoreInitialization/: BrowserCore.java  ChromiumCore.java
src/main/java/cn/mingbai/ScreenInMC/BrowserCoreInitializations/: BrowserCoreInitialization.java  ChromiumCoreInitialization.java
src/main/java/cn/mingbai/ScreenInMC/Browsers/: Browser.java  Chromium.java
src/main/java/cn/mingbai/ScreenInMC/BuiltInGUIs/: ImageViewer.java  VNCClient.java  VNCClientDelay.java  VideoPlayer.java  WebBrowser.java  Welcome.java  speedTest.java  test.java  test2.java  testAwt.java  testMGUI.java
src/main/java/cn/mingbai/ScreenInMC/Controller/: EditGUI.java  Item.java
src/main/java/cn/mingbai/ScreenInMC/Cores/: AWTCore.java  BaseCore.java  EdgeCore.java  MGUICore.java
src/main/java/cn/mingbai/ScreenInMC/GUIs/: Settings.java
src/main/java/cn/mingbai/ScreenInMC/MGUI/: Alignment.java  (+6 more)
src/main/opencl_codes/: code.cl  code_1x1.cl  code_fast.cl
src/main/resources/: config.yml  plugin.yml
src/main/resources/lang/: en_us.yml  qps_ploc.yml  zh_cn.yml  zh_hk.yml  zh_tw.yml
src/main/resources/palettes/: palette_1.12.txt  palette_1.16.txt  palette_1.17.txt  palette_1.8.1.txt  palette_1.8.txt
src/main/welcome_page/: IMG_3085.MOV  index.html  index2.html
src/test/java/: test.java
(+63 files in other folders)
